--- a/mywearapplication/src/main/res/layout/rect_activity_main.xml
+++ b/mywearapplication/src/main/res/layout/rect_activity_main.xml
@@ -4,6 +4,6 @@
     android:layout_height="match_parent" android:orientation="vertical"
     tools:context="com.tbse.mywearapplication.MainActivity" tools:deviceIds="wear_square">
 
-    <TextView android:id="@+id/text" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:text="@string/hello_square" />
+    <include layout="@layout/main" />
+
 </LinearLayout>
