--- a/mywearapplication/src/main/res/layout/round_activity_main.xml
+++ b/mywearapplication/src/main/res/layout/round_activity_main.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent" tools:context="com.tbse.mywearapplication.MainActivity"
     tools:deviceIds="wear_round">
 
-    <TextView android:id="@+id/text" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" android:text="@string/hello_round" />
+    <include layout="@layout/main" />
+
 </RelativeLayout>
